tests/prsl/fixtures/valid/minimal.prsl
begin-record
record tiny {
  content : "hi";
}
end-record
---
