tests/prsl/fixtures/invalid/missing-brace.prsl
begin-record
record missing-brace {
  content : "x";
end-record
---
